--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-addons-pure-render-mixin": "^15.2.1",
     "react-dom": "^15.2.1",
     "react-redux": "^4.4.5",
+    "react-router": "^2.5.2",
     "redux": "^3.5.2"
   }
 }
