--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^15.2.1",
     "react-addons-pure-render-mixin": "^15.2.1",
     "react-dom": "^15.2.1",
+    "react-mounter": "^1.2.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.5.2",
     "react-transform-hmr": "^1.0.4",
